# DeepGuide

./: README.md  branch_stack.txt  categorized_functions.txt  categorized_lines.txt  commands  extract.py  extract_l1-i-cache-misses.py  extracted_to_addresses.txt  perf.data  plot_branch_misses.py  plot_cpu_cycles.py  plot_l1_icache_misses.py  processed_branch_stack.txt
bucketization/: application_logic_keywords  kernel_keywords  mem_keywords  miscellaneous_keywords  sync_keywords
client-server-redis/: extract_from_branch_stack.py  neighbors.py  preceeded.py  redis_setup.sh  succeeded.py
client-server-redis/bucketization/: application_logic_keywords  c_libraries_keywords  compress_keywords  encryption_keywords  hash_keywords  kernel_keywords  mem_keywords  miscellaneous_keywords  network_keywords  serialization_keywords  sync_keywords
client-server-redis/dagger/redis/cpp/: CMakeLists.txt  modified_redis_server.c  redis_cpp_wrapper.cc  redis_cpp_wrapper.h
cpu-cycles/: perf.data
hyper-compress-bench/: hypercompressbench_setup.sh
kv-stores/: mica2_setup.sh
l1-i-cache-misses/: branch_stack_merged.txt  extract_l1-i-cache-misses.py
llc-load-misses/: perf.data
memcached/branch-misses/: branch_stack.txt  categorized_lines.txt  extracted_to_addresses.txt  perf.data  plot_branch_misses.py  plot_llc_load_misses.py  uncategorized.txt
memcached/branch_misses/: BranchMissesCount.txt  InstructionsCount.txt  categorized_lines.txt  instructions.txt  mpki.py  perf.data  perf.data.branch-misses.dump  plot_branch_misses.py  processed_branch_stack.txt
memcached/branch_misses/bucketization/: application_logic_keywords  kernel_keywords  sync_keywords
memcached/cpu-cycles/: branch_stack.txt  perf.data  plot_cpu_cycles.py
memcached/cpu_cycles/: Readme.md  branch_stack.txt  categorized_lines.txt  extract_from_branch_stack.py  perf.data  processed_branch_stack.txt
memcached/cpu_cycles/bucketization/: kernel_keywords  mem_keywords  sync_keywords
memcached/l1-icache-misses/: branch_stack.txt  categorized_lines.txt  extracted_to_addresses.txt  perf.data  plot_l1_icache_misses.py  uncategorized.txt
memcached/l1_icache_load_misses/: categorized_lines.txt  commands.txt  perf.data  perf.data.L1-icache-load-misses.dump  perf.data.instructions.dump  plot_l1_icache_misses.py  processed_branch_stack.txt
memcached/l1_icache_load_misses/bucketization/: kernel_keywords  sync_keywords
memcached/llc-load-misses/: branch_stack.txt  categorized_lines.txt  extracted_to_addresses.txt  perf.data  plot_llc_load_misses.py  uncategorized.txt
memcached/llc-load-misses/bucketization/: mem_keywords
memcached/llc_load_misses/: categorized_lines.txt  instructions.txt  perf.data  perf.data.LLC-load-misses.dump  plot_llc_load_misses.py  processed_branch_stack.txt  setup.sh
memcached/llc_load_misses/bucketization/: serialization_keywords
mongodb/branch_misses/: cleanup.sh  plot_branch_misses.py  setup.sh
mongodb/cpu_cycles/: plot_cpu_cycles.py  setup.sh
mongodb/l1_icache_misses/: plot_l1_icache_misses.py  setup.sh
mongodb/llc_load_misses/: plot_llc_load_misses.py  setup.sh
user-timeline-redis/: co_runners.py  extract_from_branch_stack.py  preceeded.py
user-timeline-redis/bucketization/: application_logic_keywords  c_libraries_keywords  compress_keywords  encryption_keywords  hash_keywords  kernel_keywords  mem_keywords  miscellaneous_keywords  network_keywords  serialization_keywords  sync_keywords
user-timeline-redis/cpu_cycles/bucketization/: application_logic_keywords  c_libraries_keywords  encryption_keywords  kernel_keywords  mem_keywords  sync_keywords
